--- a/NewVisionPayment/Pages/_Host.cshtml
+++ b/NewVisionPayment/Pages/_Host.cshtml
@@ -12,14 +12,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mudblazor Template</title>
     <base href="~/" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Ariel:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
-        <environment include="Staging,Production">
+        <environment include="NewVision Payment">
             An error has occurred. This application may no longer respond until reloaded.
         </environment>
         <environment include="Development">
