--- a/NewVisionPayment/Shared/NavMenu.razor
+++ b/NewVisionPayment/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Information</MudNavLink>
-    <MudNavLink Href="/fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Help</MudNavLink>
+    <MudNavLink Href="/payment" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Payment</MudNavLink>
+    <MudNavLink Href="/dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Help</MudNavLink>
+    <MudNavLink Href="/fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Everything</MudNavLink>
 </MudNavMenu>
