Wednesday 3pm commit

--- a/NewVisionPayment/Shared/IfSomeThingIsWrong.razor
+++ b/NewVisionPayment/Shared/IfSomeThingIsWrong.razor
@@ -2,7 +2,7 @@
     <MudCard>
         <MudCardHeader>
         <CardHeaderContent>
-            <MudText Typo="Typo.h5">Before you begin.</MudText>
+            <MudText Typo="Typo.h5">What to do if these details are wrong:</MudText>
         </CardHeaderContent>
         <CardHeaderActions>
             <MudIconButton Icon="@Icons.Material.Filled.Help" Color="Color.Default" />
@@ -13,6 +13,7 @@
             <MudList>
                 <MudListItem Icon="@Icons.Material.Filled.Mail"><MudText Typo="Typo.h6">Your reference letter</MudText></MudListItem>
                 <MudListItem Icon="@Icons.Material.Filled.Payment"><MudText Typo="Typo.h6">Your payment details</MudText></MudListItem>
+                <MudListItem Icon="@Icons.Material.Filled.Phone"><MudText Typo="Typo.h6">Contact the Court Service</MudText></MudListItem>
             </MudList>
         </MudCardContent>
         <MudCardActions>
