--- a/NewVisionPayment/Pages/Index.razor
+++ b/NewVisionPayment/Pages/Index.razor
@@ -8,10 +8,10 @@
 
 
 
-    <MudPaper Class="a-16 ma-2" Elevation="3">
+    <MudPaper Class="a-16 ma-2 ml-12" Elevation="3">
         <MudText Typo="Typo.h4" GutterBottom="true">&nbsp;</MudText>
-        <MudText Typo="Typo.h4" GutterBottom="true">Welcome to NewVision Payments</MudText>
-        <MudText Class="mb-8">   Please have your letter and payment details handy</MudText>
+        <MudText Class ="ml-12" Typo="Typo.h4" GutterBottom="false">Welcome to NewVision Payments</MudText>
+        <MudText Class="mb-8 ml-12">   Please have your letter and payment details handy</MudText>
         <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
             <MudGrid>
                 <MudItem xs="12" sm="6">
