--- a/NewVisionPayment/Pages/Payment.razor
+++ b/NewVisionPayment/Pages/Payment.razor
@@ -1,4 +1,5 @@
 ﻿@page "/payment"
+
 @using NewVisionPayment.Services
 @using NewVisionPayment.Shared
 
@@ -8,33 +9,26 @@
 
 
 
+<MudPaper Class="a-16 ma-2 ml-12" Elevation="3">
+    <MudText Typo="Typo.h4" GutterBottom="true">&nbsp;</MudText>
+    <MudText Class="ml-12" Typo="Typo.h4" GutterBottom="false">Welcome to NewVision Payments</MudText>
+    <MudText Class="mb-8 ml-12">   Please have your letter and payment details handy</MudText>
+    <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
+        <MudGrid>
+            <MudItem xs="12" sm="6">
+                <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
 
-    <MudPaper Class="a-16 ma-2" Elevation="3">
-        <MudText Typo="Typo.h4" GutterBottom="true">&nbsp;</MudText>
-        <MudText Typo="Typo.h4" GutterBottom="true">Welcome to NewVision Payments</MudText>
-        <MudText Class="mb-8">   Please have your letter and payment details handy</MudText>
-        <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
-            <MudGrid>
-                <MudItem xs="12" sm="6">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
+                    <Address />
 
-                        <StartPanel />
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="12" sm="6">
+                <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
 
-                    </MudPaper>
-                </MudItem>
-                <MudItem xs="12" sm="6">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
+                    <IfSomeThingIsWrong />
 
-                        <BeforeYouBegin />
-
-                    </MudPaper>
-                </MudItem>
-            </MudGrid>
-        </MudContainer>
-    </MudPaper>
-
-
-    @code {
-        
-
-    }
+                </MudPaper>
+            </MudItem>
+        </MudGrid>
+    </MudContainer>
+</MudPaper>
