--- a/NewVisionPayment/Pages/FetchData.razor
+++ b/NewVisionPayment/Pages/FetchData.razor
@@ -12,7 +12,7 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-16">
     <MudText Typo="Typo.h3" GutterBottom="true">NewVisionPayments Dashboard</MudText>
     <MudText Class="mb-8">This component demonstrates fetching data from the server.</MudText>
-    @if (customers == null)
+    @if (allCustomers == null)
     {
         <MudProgressCircular Color="Color.Default" Indeterminate="true" />
         <MudSkeleton Animation="Animation.Wave" />
@@ -22,7 +22,8 @@
         <MudSimpleTable Dense="false" Hover="true" Bordered="true" Striped="true" Style="overflow-x: auto;">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>Case Id</th>
+                    <th>Reference</th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Fine Amount</th>
@@ -33,10 +34,11 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (NewVisionCustomer customer in customers)
+                @foreach (NewVisionCustomer customer in allCustomers)
                 {
                     <tr>
                         <td>@customer.Id</td>
+                        <td>@customer.reference</td>
                         <td>@customer.firstName</td>
                         <td>@customer.lastName</td>
                         <td>@customer.fineAmount</td>
@@ -54,14 +56,14 @@
 </MudContainer>
 
 @code {
-    public static List<NewVisionCustomer> customers = new List<NewVisionCustomer>();
+    public static List<NewVisionCustomer> allCustomers = new List<NewVisionCustomer>();
 
     public static string sqlQuery;
 
     protected override async Task OnInitializedAsync()
     {
 
-        customers = await CosmosDbService.GetItemsAsync("SELECT * FROM c");
+        allCustomers = await CosmosDbService.GetItemsAsync("SELECT * FROM c");
         // where c.finepaid = false
 
     }
