Addeed components and text

--- a/NewVisionPayment/Pages/Index.razor
+++ b/NewVisionPayment/Pages/Index.razor
@@ -16,7 +16,7 @@
 
 <MudPaper Class="a-16 ma-2 ml-12" Elevation="3">
     <MudText Typo="Typo.h4" GutterBottom="true">&nbsp;</MudText>
-    <MudText Class="ml-12" Typo="Typo.h4" GutterBottom="false">Welcome to NewVision Payments</MudText>
+    <MudText Class="ml-12" Typo="Typo.h4" GutterBottom="false">Paying your fine.</MudText>
     <MudText Class="mb-8 ml-12">Please have your letter and payment details nearby</MudText>
     <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
         <MudGrid>
