--- a/NewVisionPayment/Shared/WhatNext.razor
+++ b/NewVisionPayment/Shared/WhatNext.razor
@@ -12,10 +12,14 @@
         <MudCardContent>
             <MudText Typo="Typo.subtitle1">Make sure you have the following:</MudText>
             <MudList>
-                <MudListItem Icon="@Icons.Material.Filled.Mail"><MudText Typo="Typo.h6">Your reference letter</MudText></MudListItem>
-                <MudListItem Icon="@Icons.Material.Filled.Payment"><MudText Typo="Typo.h6">Your payment details</MudText></MudListItem>
                 <MudListItem Icon="@Icons.Material.Filled.Phone"><MudText Typo="Typo.h6">Purchase a television licence</MudText></MudListItem>
             </MudList>
+            <MudText>
+                The Televisino licensing authority and the Courts Service NI have been notified of your payment.
+            </MudText>
+            <MudText>
+                If you have not received a letter detailing your payment please contact the Courts Service N.I.
+            </MudText>
         </MudCardContent>
         <MudCardActions>
             <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
