--- a/NewVisionPayment/Shared/Failure.razor
+++ b/NewVisionPayment/Shared/Failure.razor
@@ -5,22 +5,11 @@
     <MudCardHeader>
     </MudCardHeader>
     <MudCardContent>
-        <MudList>
-            <MudListItem>
-                <MudText>Choose Payment Method</MudText>
-                <MudItem xs="12">
-                    <MudTextField T="string" Label="Case Id" />
-                </MudItem>
-            </MudListItem>
-            <MudListItem>
-                <MudText>Enter your email</MudText>
-                <MudItem xs="12">
-                    <MudTextField T="string" Label="Reference Number" />
-                </MudItem>
-            </MudListItem>
-            <MudListItem>
-            </MudListItem>
-        </MudList>
+
+        <h1> CARD DECLINED</h1>
+        <h2> Please try again with another payment method</h2>
+
+
     </MudCardContent>
 </MudCard>
 
