--- a/NewVisionPayment/Shared/Success.razor
+++ b/NewVisionPayment/Shared/Success.razor
@@ -3,25 +3,22 @@
 
 <MudCard>
     <MudCardHeader>
+        <h1>Thank you!</h1>
     </MudCardHeader>
     <MudCardContent>
-        <MudList>
-            <MudListItem>
-                <MudText>Choose Payment Method</MudText>
-                <MudItem xs="12">
-                    <MudTextField T="string" Label="Case Id" />
-                </MudItem>
-            </MudListItem>
-            <MudListItem>
-                <MudText>Enter your email</MudText>
-                <MudItem xs="12">
-                    <MudTextField T="string" Label="Reference Number" />
-                </MudItem>
-            </MudListItem>
-            <MudListItem>
-            </MudListItem>
-        </MudList>
-    </MudCardContent>
+        <p>The income from the TV licence fee means all licence payers can enjoy an ever wider choice of BBC programmes and services on TV, radio and online including:</p>
+        <ul>
+            <li>Nine national TV channels plus regional TV services</li>
+            <li>Radio stations - 10 pan-UK, six national and 40 local</li>
+            <li>BBC website</li>
+            <li>BBC iPlayer</li>
+            <li>BBC Sounds – including radio and podcasts</li>
+            <li>BBC World Service - TV, radio and online</li>
+            <li>Other apps and online services like Bitesize, CBeebies, BBC Three, Food, News, Sport and Weather.</li>
+            <p>All free at the point of use, on a wide range of platforms and devices.</p>
+            By buying a licence you support the creation of BBC programmes and services, and new ways of bringing them to you. Our purpose is to ensure as much of the fee as possible goes towards funding them.
+        </ul>
+     </MudCardContent>
 </MudCard>
 
 
