--- a/NewVisionPayment/Shared/Failure.razor
+++ b/NewVisionPayment/Shared/Failure.razor
@@ -9,6 +9,7 @@
         <h1> CARD DECLINED</h1>
         <h2> Please try again with another payment method</h2>
 
+        <h3> Use the Back button below to get to the previous screen. </h3>
 
     </MudCardContent>
 </MudCard>
@@ -18,5 +19,5 @@
 @code{
     // This is the id we will carry over from our beginning screen and passed through via the
     [Parameter]
-    public NewVisionCustomer displayCustomer { get; set; } = new NewVisionCustomer();
+    public NewVisionCustomer displayFail { get; set; } = new NewVisionCustomer();
 }
