Latest thurs afternoon

--- a/NewVisionPayment/Shared/Success.razor
+++ b/NewVisionPayment/Shared/Success.razor
@@ -22,7 +22,7 @@
         </MudList>
 
 
-        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Size="Size.Large" Class="mt-8"> Print This Page </MudButton>
+        <MudButton Link="/" Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Size="Size.Large" Class="mt-8"> Print This Page </MudButton>
     </MudCardContent>
 
     
